[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xiaohongshu-pro"
version = "0.1.0"
description = "小红书 Pro — AI-powered 小红书 browser automation tool"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "playwright>=1.40.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.25.0",
    "pyyaml>=6.0",
]

[project.scripts]
xiaohongshu = "src.__main__:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/"]
